--- a/src/app/movie-details/movie-details.component.html
+++ b/src/app/movie-details/movie-details.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-5">
-    <a [routerLink]="['/movies']">Back</a>
+    <a [routerLink]="['/movie-listings']">Back</a>
     <div class="card mb-3 card-full" *ngIf="(movieDetails$ | async) as movie">
         <div class="row g-0">
           <div class="col-md-4">
